more collections backporting